# uneven_planner_ROS2

./: .gitignore  README.md  ROS2_MIGRATION_COMPLETE.md  ROS2_MIGRATION_PLAN.md  desert.sh  forest.sh  hill.sh  mountain.sh  volcano.sh
src/carsim/: CMakeLists.txt  package.xml
src/carsim/config/: controller_config.yaml
src/carsim/launch/: spawn_car.launch.py
src/carsim/models/forest_additions/: model.config  model.sdf
src/carsim/scripts/: cmdvel2gazebo.py  keyboard_control.py  true_state_pub.py  world_tf_pub.py
src/carsim/src/: searchForSetPoint.cpp
src/carsim/urdf/: car_model_description.xacro  racecar.gazebo
src/carsim/worlds/: map_desert.world
src/uneven_planner/back_end/: CMakeLists.txt  package.xml
src/uneven_planner/back_end/include/back_end/: alm_traj_opt.h
src/uneven_planner/back_end/include/utils/: se2traj.hpp
src/uneven_planner/back_end/src/: alm_traj_opt.cpp  back_end_node.cpp
src/uneven_planner/front_end/: CMakeLists.txt  package.xml
src/uneven_planner/front_end/include/front_end/: kino_astar.h
src/uneven_planner/front_end/src/: front_end_node.cpp  kino_astar.cpp
src/uneven_planner/mpc_controller/: CMakeLists.txt  package.xml
src/uneven_planner/mpc_controller/include/mpc/: mpc.h
src/uneven_planner/mpc_controller/include/utils/: traj_anal.hpp
src/uneven_planner/mpc_controller/msg/: SE2Traj.msg
src/uneven_planner/mpc_controller/params/: controller.yaml
src/uneven_planner/mpc_controller/src/: mpc.cpp  mpc_node.cpp
src/uneven_planner/plan_manager/: CMakeLists.txt  package.xml
src/uneven_planner/plan_manager/include/plan_manager/: plan_manager.h
src/uneven_planner/plan_manager/launch/: run_desert.launch.py  run_forest.launch.py  run_hill.launch.py  run_mountain.launch.py  run_volcano.launch.py
src/uneven_planner/plan_manager/params/: run_desert.yaml  run_forest.yaml
src/uneven_planner/plan_manager/rviz/: rviz.rviz
src/uneven_planner/plan_manager/src/: manager_node.cpp  plan_manager.cpp
src/uneven_planner/uneven_map/: CMakeLists.txt  package.xml
src/uneven_planner/uneven_map/include/uneven_map/: uneven_map.h
src/uneven_planner/uneven_map/src/: uneven_map.cpp  uneven_map_node.cpp
