<?xml version="1.0"?>
<package format="3">
  <name>back_end</name>
  <version>0.0.1</version>
  <description>a back end package</description>

  <maintainer email="xulon666@gmail.com">xulong</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>uneven_map</depend>
  <depend>front_end</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
