<?xml version="1.0"?>
<package format="3">
  <name>mpc_controller</name>
  <version>0.0.1</version>
  <description>a model predictive controller for ground robots</description>
  <maintainer email="xulon666@gmail.com">xulong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 非ROS依赖（通过 CMake find_package） -->
  <build_depend>eigen</build_depend>
  <build_depend>OsqpEigen</build_depend>
  <exec_depend>OsqpEigen</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
