<?xml version="1.0"?>
<package format="3">
  <name>plan_manager</name>
  <version>0.0.1</version>
  <description>a plan manager package</description>
  <maintainer email="xulon666@gmail.com">xulong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>uneven_map</build_depend>
  <build_depend>front_end</build_depend>
  <build_depend>back_end</build_depend>
  <build_depend>mpc_controller</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ompl</exec_depend>
  <exec_depend>uneven_map</exec_depend>
  <exec_depend>front_end</exec_depend>
  <exec_depend>back_end</exec_depend>
  <exec_depend>mpc_controller</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
